<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Example1Activity!</string>
    <string name="app_name">FindTechnician</string>
    <string name="main_title"><b>Android FindTechnician Application</b></string>
   
   <!-- the help button -->
    <string name="help_title">help findTechnician</string>
	<string name="help_text">\
    <i>Find technician</i> is an application that help you to <b>find</b> technician in your environment
    and show them on the map by click the <i>search technician</i> button.if you are encounter a 
    problem with the application search you can visit our site on the web for further information 
    and help
    </string>
    
    <!-- the exit button -->
    <string name="exit_title">exit the program</string>
	<string name="exit_text">
	</string>
	
	<!-- the search technician button -->
	
	<string name="find_title">find a technician</string>
	<string name="find_text">\
	The team has not succeed yet to fix the problem with the map showing.We are trying to fix it
	and hope that we do that as soon as possible.You can visit our site for finding a technician.
	Tank you for choosing the FindTechician application.
	</string>
    
    <!-- the spinner list -->
    <string name="list_prompt">choose a technician </string>
    <string-array name="list_arrays">
        <item>plumber</item>
        <item>electrician</item>
        <item>locksmith</item>
        <item>vehicle</item>
        <item>air conditionning</item>
        <item>computers</item>
        <item>tv fixer</item>
        <item>other</item>
    </string-array> 
    
	<string name="find_label">search Technician</string>
	<string name="category_label">by category</string>
	<string name="help_label">help</string>
	<string name="exit_label">Exit</string>
	
	<string name="settings_label">Settings...</string>
	<string name="settings_title">Find technician settings</string>
	<string name="settings_shortcut">s</string>
	<string name="music_title">Music</string>
	<string name="music_summary">Play background music</string>


</resources>


