<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@drawable/bnackground5"
   android:padding="30dip" >   //make in the center.
   <LinearLayout 
      android:orientation="horizontal" 
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:layout_gravity="center" />
      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="25dip"
         android:textSize="14sp"
         android:text="@string/main_title" />
      
      <!-- first button -->
     <Button
         android:id="@+id/find_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/find_label"/>
         
      <!-- second button -->
      <Spinner
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:entries="@array/list_arrays"
         android:prompt="@string/list_prompt"
         android:text="@string/category_label" />
         
      <!-- third button -->    
     <Button
         android:id="@+id/help_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/help_label" />
         
         
	  <!-- fourth button -->
     <Button 
         android:id="@+id/exit_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Exit"/>
         <!-- android:text="@string/exit_label"/ -->  <!-- don't need it anymore... -->

     <SeekBar
         android:id="@+id/seekBar1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />


    </LinearLayout>
 
		
    